--- a/public/css/flip_box.css
+++ b/public/css/flip_box.css
@@ -66,3 +66,32 @@
     justify-content: space-between;
     padding-bottom: 40px;
 }
+
+@media (min-width: 768px) {
+  .col-md-6 {
+      flex: 0 0 auto;
+      width: 50%;
+      text-align: -webkit-right;
+  }
+}
+
+/* @media (max-width: 767px) {
+ 
+  .flip-box-container {
+      padding-right: 0 !important;
+      padding-left: 0 !important;
+      background-color: aqua;
+      text-align: center;
+  }
+
+  .container {
+    max-width: 90% !important;
+    margin: auto !important;
+  }
+
+  .row>* {
+    width: 50% !important;
+    background-color: #bbb;
+  }
+}
+ */
